<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".locationreminders.ReminderDescriptionActivity">
        <!--TODO COMPLETED: add the design of the reminder details-->

        <TextView
            android:id="@+id/reminderLONData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center|start"
            android:text="@{@string/formatted_LatLng(reminderDataItem.longitude)}"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/reminderLONHeading"
            app:layout_constraintTop_toTopOf="@+id/reminderLONHeading"
            tools:text="35.840236, 25.204893" />

        <TextView
            android:id="@+id/reminderLONHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/notify_LON_heading"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/reminderLATHeading"
            app:layout_constraintTop_toBottomOf="@+id/reminderLATHeading" />

        <TextView
            android:id="@+id/reminderLATData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center|start"
            android:text="@{@string/formatted_LatLng(reminderDataItem.latitude)}"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/reminderLATHeading"
            app:layout_constraintTop_toTopOf="@+id/reminderLATHeading"
            tools:text="35.840236, 25.204893" />

        <TextView
            android:id="@+id/reminderLATHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/notify_LAT_heading"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/reminderLocationData"
            app:layout_constraintTop_toBottomOf="@+id/reminderLocationData" />

        <TextView
            android:id="@+id/reminderLocationHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/notify_location_heading"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminderDescriptionData" />

        <TextView
            android:id="@+id/reminderLocationData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center|start"
            android:text="@{reminderDataItem.location}"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/reminderLocationHeading"
            app:layout_constraintTop_toBottomOf="@+id/reminderLocationHeading"
            tools:text="35.840236, 25.204893" />

        <TextView
            android:id="@+id/reminderDescriptionData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center|start"
            android:text="@{reminderDataItem.description ?? @string/notify_details_no_data}"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/reminderDescriptionHeading"
            app:layout_constraintTop_toBottomOf="@+id/reminderDescriptionHeading"
            tools:text="@string/lorem_ipsum" />

        <TextView
            android:id="@+id/reminderDescriptionHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/notify_details_heading"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminderTitleData" />

        <TextView
            android:id="@+id/reminderTitleData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center|start"
            android:text="@{reminderDataItem.title}"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/reminderTitleHeading"
            app:layout_constraintTop_toBottomOf="@+id/reminderTitleHeading"
            tools:text="Geofence Title goes here" />

        <TextView
            android:id="@+id/reminderTitleHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/notify_detail_title"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>